# experiment_wp2

./: README.md
collect/: CMakeLists.txt  package.xml
collect/launch/: collect_launch.launch
collect/msg/: AllData.msg
collect/src/: collectData_node.cpp
common/calibration/: CMakeLists.txt  README.md
common/calibration/config/: transformation.txt
common/calibration/launch/: hand_calibration.launch  istruzioni  kinect_calibration.launch  object_calibration.launch
common/calibration/src/: hand_calibration.cpp  kinect_calibration.cpp  object_calibration.cpp
common/common/: CMakeLists.txt  package.xml
common/tf_frames/: CMakeLists.txt  package.xml
common/tf_frames/config/CAD_FILES/: star.txt  star.txt~  starhand.txt  starold.txt  t1.txt  t2.txt  t3.txt  t4.txt  t5.txt  thimble.txt  thimble1.txt  thimble2.txt  thimble3.txt  thimble_asb1.txt  wrist.txt  wrist.txt~
common/tf_frames/launch/: tf_camera_world.launch  tf_kalman_hand.launch  tf_kalman_star.launch  tf_kalman_thimbles.launch  tf_kalman_wrist.launch  tf_star_object.launch  tf_wrist_hand.launch
common/tf_frames/src/: Kalman.cpp  tf_kalman_node.cpp
display/launch/: camera.launch  display_all.launch  display_bracelet.launch  display_object.launch  display_star.launch  display_star_object.launch
display/mesh/: cyl_w_closed_handle1.stl  cyl_w_closed_handle_sc.stl
display/urdf/: bracelet.urdf.xacro  display_all.urdf.xacro  hand.urdf.xacro  object.urdf.xacro  only_bracelet.urdf.xacro  only_object.urdf.xacro  only_star.urdf.xacro  star.urdf.xacro  star_object.urdf.xacro
